Refactor: Added useful comments

--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -52,7 +52,7 @@ header{
     position:relative;
 }
 
-.banner--fadeBottom{
+.banner--fade-bottom{
     position: absolute;
     left:0;
     right:0;
